# mesosphere-coding-challenge

./: CMakeLists.txt  README.md  main.cpp
include/: job.hpp  node.hpp  scheduler.hpp
src/: job.cpp  node.cpp  scheduler.cpp
